--- a/gan.ipynb
+++ b/gan.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "gan.ipynb",
+      "name": "Copy of gan.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -41,7 +41,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -57,11 +57,11 @@
       "metadata": {
         "id": "nU6M3kndXjTG",
         "colab_type": "code",
+        "outputId": "37f014d0-e3d2-4fc9-fd1c-76b035f0a4c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "37f014d0-e3d2-4fc9-fd1c-76b035f0a4c1"
+        }
       },
       "source": [
         "%tensorflow_version 1.x\n",
@@ -73,7 +73,7 @@
         "import  os\n",
         "import numpy as np\n"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
         "print(\"Train Images:\", train_images.shape, \"Test Images:\", test_images.shape)\n",
         "label_text = ['T-shirt/top','Trouser','Pullover','Dress','Coat','Sandal','Shirt','Sneaker','Bag','Ankle boot']"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "  plt.imshow(train_images[j], cmap = 'gray')\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -178,7 +178,7 @@
         "test_images = test_images/255.0\n",
         "print(train_images[0])"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,11 +468,11 @@
       "metadata": {
         "id": "6D-Xkz3d5cCJ",
         "colab_type": "code",
+        "outputId": "e4bf3ead-1204-4864-bc95-e035414af79d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 230
-        },
-        "outputId": "e4bf3ead-1204-4864-bc95-e035414af79d"
+        }
       },
       "source": [
         "\n",
@@ -488,7 +488,7 @@
         "D_loss = (D_real_loss + D_fake_loss)/2\n",
         "G_loss = loss_func(D_logits_fake,tf.ones_like(D_logits_fake))\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -553,7 +553,7 @@
         "\n",
         "print(d_vars, g_vars)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,11 +569,11 @@
       "metadata": {
         "id": "NYLGOWQC7Ng9",
         "colab_type": "code",
+        "outputId": "542fa986-eda7-43ac-cd8b-af736b677276",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 409
-        },
-        "outputId": "542fa986-eda7-43ac-cd8b-af736b677276"
+          "height": 426
+        }
       },
       "source": [
         "with tf.Session() as sess:\n",
@@ -657,7 +657,8 @@
           "text": [
             "lossD: 0.7086455225944519, lossG: 4.643930912017822, accG: 0.00199765625, accD: 0.859348046875\n",
             "on epoch1\n",
-            "on epoch2\n"
+            "on epoch2\n",
+            "on epoch3\n"
           ],
           "name": "stdout"
         }
